k8s/apps/ducknet-devops/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  selector:
    matchLabels:
      app: docker-registry
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry:2
        resources:
            requests:
              memory: "20Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "250m"
        ports:
          - name: http
            containerPort: 5000
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /etc/docker/registry
            readOnly: true
          - name: htpasswd
            mountPath: /auth
            readOnly: true
          - name: storage
            mountPath: /var/lib/registry
      volumes:
        - name: config
          configMap:
            name: docker-registry
            items:
              - key: registry-config.yml
                path: config.yml
        - name: htpasswd
          secret:
            secretName: docker-registry
            items:
            - key: HTPASSWD
              path: htpasswd
        - name: storage
          persistentVolumeClaim:
            claimName: docker-registry
